test/e2e/fixtures/tracing-short-trace-id/queries-collector.json
[
  {"url": "/zipkin/api/v2/traces?limit=1000", "method": "GET"},
  {"url": "/ambassador/v0/diag/", "method": "GET"}
]
